# tensorflow

./: .gitignore
classification/: fashion_mnist.py  mnist.py
regression/: predict_house_prices.py
regression/common/: base_common.py  const_def.py  np_common.py
regression/gpu_train/: clean.sh  download_model.sh  dqn_fix_dataset.py  dqn_fix_run.sh  dqn_test.py  gpu_train.py  gpu_train_feature.py  gpu_train_fix_dataset.py  gpu_train_fix_test.py  gpu_train_paras.py  gpu_train_wave_dataset.py  gpu_train_wave_test.py  run_gpu_train.sh  show.py  show.sh  upload_code.sh
regression/house/: get_data.py  predict_house_prices.py
regression/stock/: 1-1ratio.py  1-1value.py  10-1.py  avg_wave.py  backup.sh  breakup_filter.py  breakup_kernel.py  breakup_trade_test.py  choice_data.py  daily_data.py  design.txt  design_dqn.txt  design_dqn_fix.txt  download_breakup_filter_data.sh  download_predict_data.py  download_predict_data.sh  download_train_data.py  download_train_data.sh  download_train_test_data.py  dqn.py  dqn_dataset.py  (+46 more)
regression/stockv2/cpp/: CMakeLists.txt  clean.sh  compile.sh  run.sh
regression/stockv2/cpp/src/common/: RBOEncrypt.cpp  RBOEncrypt.h  RBOFile.cpp  RBOFile.h  RBOKey.cpp  VCALogManage.h
regression/stockv2/cpp/src/free_type/: CvxText.cpp  CvxText.h
regression/stockv2/cpp/src/image/: VCAAcc.cpp  VCAAcc.h  VCAEnhancement.cpp  VCAImage.cpp  VCAImage.h
regression/stockv2/cpp/src/show/: ppi.h  show.cpp  show_pp_data.cpp  show_pp_data.h
study/: version.py
summary/: input_data.py  mnist_softmax.py  mnist_with_summaries.py  run.sh  summary_test.py
(+57 files in other folders)
